# ai-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  chatbot.py  chatbot_test.py  cloudbuild.yaml  prompt.txt  pyproject.toml  requirement.txt
src/: app.py  chatbot.py  chatbot_test.py  prompt.txt
terraform/: .terraform.lock.hcl  backend.tf  data.tf  locals.tf  main.tf  provider.tf  variables.tf
